<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.stravinskii.eldespacho.AgendaCitasFragment">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/hello_admin_citas" />

    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/citaA"
        android:id="@+id/citaA"/>

    <TextView
        android:layout_marginTop="250dp"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/citaB"
        android:id="@+id/citaB" />

    <TextView
        android:layout_marginTop="350dp"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/citaC"
        android:id="@+id/citaC" />

    <TextView
        android:layout_marginTop="450dp"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/citaD"
        android:id="@+id/citaD" />

</FrameLayout>
